# umc

./: .gitignore  Cargo.toml  LICENSE  README.md  assemble.sh  disassemble.sh  run.sh  test.umc
.github/workflows/: deploy_pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  binary_format.md  ecalls.md  instructions.md  intro.md  memory.md  reg_sets.md
progs/: address_reg.umc  bad_operands.umc  bad_syntax.umc  call_stack.umc  commented.umc  dup_label.umc  ecall_hello.umc  ecall_print.umc  euler.umc  expand_not.umc  fib.umc  iaddress_reg.umc  indented.umc  invalid_constant.umc  jmp_to_num_op.umc  multi_errors.umc  pi.umc  pre_mem.umc  primes.umc  sieve.umc  signed.umc  sum_first_n.umc  test_huge_int.umc  test_loop.umc  test_mixed.umc  test_non_native_int.umc  test_overflow.umc
src/: assembler.rs  ast.rs  bytecode.rs  grammar.lalrpop  grammar_tests.rs  main.rs  model.rs  vm.rs
src/model/: instructions.rs  parse.rs
src/vm/: helper.rs  mod.rs  state.rs  test.rs
umc-model/: Cargo.toml
umc-model/src/: format.rs  instructions.rs  lib.rs  operand.rs  parse.rs  reg_model.rs  unparse.rs
umc-vm/: Cargo.toml
umc-vm/src/: main.rs
umc-vm/src/vm/: environment.rs  helper.rs  memory.rs  mod.rs  state.rs  test.rs  widths.rs
umc-vm/src/vm/compiler/: llvm.rs  mod.rs
umc-vm/src/vm/memory/: safe.rs
umc-vm/src/vm/types/: address.rs  float.rs  int.rs  mod.rs  uint.rs  vector.rs
umc-vm/src/vm/widths/: int.rs  mod.rs  single.rs  uint.rs
umcc/: Cargo.toml
umcc/src/: assembler.rs  ast.rs  error_display.rs  grammar.lalrpop  grammar_tests.rs  lib.rs  main.rs
(+17 files in other folders)
