[package]
name = "umc-vm"
version = "0.1.0"
description = "Virtual Machine for Universal Machine Code"
edition = "2024"

[dependencies]
umc-model = { path = "../umc-model" }
umcc = { path = "../umcc" }

# Arbitrary manually controlled width integers
awint = {version = "0.18.1" }

# For Command line args parsing
clap = { version = "4.5.55", features = ["derive"]}
rustc-hash = "2.1.1"
int-enum = "1.2.0"

# LLVM-JIT
inkwell = { version = "0.8.0", features = ["llvm21-1"]}
